<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"> <!-- Hace que el ScrollView ocupe todo el espacio disponible -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.JDD.JDDFragment"
        android:background="#FCEEE5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:ignore="VisualLintOverlap" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bunny"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="50dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            android:text="@string/nombre_del_producto"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_detallada_del_producto_aqu_puedes_incluir_informaci_n_sobre_las_caracter_sticas_materiales_tama_o_y_cualquier_otro_detalle_importante"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="420dp"
            tools:ignore="VisualLintLongText,VisualLintOverlap" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="550dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_99_99"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="600dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="VisualLintOverlap" />

        <Button
            android:id="@+id/button_comprar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="670dp"
            android:text="@string/comprar"
            android:background="#0000FF"
            tools:ignore="VisualLintOverlap" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="750dp"
            android:background="#000000"
            android:text="@string/agregar_al_carrito"
            tools:ignore="VisualLintOverlap" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="830dp"
            android:background="#000000"
            android:text="@string/favorito"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginTop="940dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/informacion_adicional"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="1000dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/marca"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="1040dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/nombre_de_la_marca"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="1120dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/modelo"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="1160dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/modelo_del_producto"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="1230dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/dimensiones"
            tools:ignore="VisualLintOverlap" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="1270dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/_10cm_x_20cm_x_5cm"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="1350dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/color"
            tools:ignore="VisualLintOverlap" />
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="1390dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/color_del_producto"
            tools:ignore="VisualLintOverlap" />
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="1470dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/material"
            tools:ignore="VisualLintOverlap" />
        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="1510dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/material_del_producto"
            tools:ignore="VisualLintOverlap" />
        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginTop="1600dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/comentarios"
            tools:ignore="VisualLintOverlap" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1670dp"
                android:hint="@string/agrega_algun_comentario"
                android:textAlignment="center"
                android:textSize="25sp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1760dp"
            android:text="@string/enviar_comentario"
            android:textAlignment="center"
            android:textSize="23sp"
            android:layout_gravity="center_horizontal" />
    </FrameLayout>
</ScrollView>
