<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_CatalogoJDD">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fic.bunnyshopmobiletry5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fic.bunnyshopmobiletry5.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fic.bunnyshopmobiletry5.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_prueba1"
        android:name="com.fic.bunnyshopmobiletry5.ui.prueba1.prueba1"
        android:label="@string/menu_prueba1"
        tools:layout="@layout/fragment_prueba1" />


    <fragment
        android:id="@+id/nav_blank"
        android:name="com.fic.bunnyshopmobiletry5.ui.emma.BlankFragment"
        android:label="Emma"
        tools:layout="@layout/fragment_blank" />

    <fragment
        android:id="@+id/nav_jdd"
        android:name="com.fic.bunnyshopmobiletry5.ui.JDD.JDDFragment"
        android:label="JDD"
        tools:layout="@layout/fragment_j_d_d"/>

    <fragment
        android:id="@+id/nav_bri"
        android:name="com.fic.bunnyshopmobiletry5.ui.briseyda.BriseydaFragment"
        android:label="Bri"
        tools:layout="@layout/fragment_briseyda"/>

    <fragment
        android:id="@+id/nav_mario"
        android:name="com.fic.bunnyshopmobiletry5.ui.mario.MarioFragment"
        android:label="Mario"
        tools:layout="@layout/fragment_mario"/>

    <fragment
        android:id="@+id/nav_demeza"
        android:name="com.fic.bunnyshopmobiletry5.ui.demeza.DemezaFragment"
        android:label="Demeza"
        tools:layout="@layout/fragment_demeza"/>

    <fragment
        android:id="@+id/nav_ovier"
        android:name="com.fic.bunnyshopmobiletry5.ui.ovier.OvierFragment"
        android:label="Ovier"
        tools:layout="@layout/fragment_ovier"/>

    <fragment
        android:id="@+id/nav_CatalogoJDD"
        android:name="com.fic.bunnyshopmobiletry5.ui.CatalogoJDD.CatalogoJDDFragment"
        android:label="Juan De Dios"
        tools:layout="@layout/fragment_catalogo_j_d_d"/>

    <fragment
        android:id="@+id/nav_RegistroFragment"
        android:name="com.fic.bunnyshopmobiletry5.ui.registro.RegistroFragment"
        android:label="Registro"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/catalogoFragment"
        android:name="com.fic.bunnyshopmobiletry5.ui.Catalogo.CatalogoFragment"
        android:label="CatalogoFragment" />
    <fragment
        android:id="@+id/pagoFragment"
        android:name="com.fic.bunnyshopmobiletry5.ui.pago.PagoFragment"
        android:label="Pago"
        tools:layout="@layout/fragment_pago" />

</navigation>